# Summarify

./: CHANGELOG.md  LICENSE  README.md  ci.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml
summarify/: __init__.py  parser.py  summary.py
tests/: test_parser.py
