[tool.poetry]
name = "summarify"
version = "0.1.0"
description = "Get title and description from a Web page"
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]
include = ["summarify/py.typed"]
readme = "README.md"
homepage = "https://github.com/bfontaine/summarify"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.9.3"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.17"
mypy = "^1"
pytest = "^7.2.2"
requests-mock = "^1.10.0"
pytest-cov = "^4.0.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "bs4",
]
ignore_missing_imports = true